--- a/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
+++ b/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
@@ -1591,6 +1591,9 @@
                                     <subviews>
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="fdT-Rg-3Ww">
                                             <rect key="frame" x="543" y="6" width="51" height="31"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="51" id="tat-ZC-961"/>
+                                            </constraints>
                                             <connections>
                                                 <action selector="valueChangedAdditionSwitch:" destination="Qfb-nl-T21" eventType="valueChanged" id="qb9-Je-sha"/>
                                             </connections>
@@ -1598,7 +1601,7 @@
                                         <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="OHT-1i-hRf">
                                             <rect key="frame" x="385" y="8" width="150" height="29"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="150" id="YcR-2F-OXt"/>
+                                                <constraint firstAttribute="width" constant="150" id="t0d-ba-kXz"/>
                                             </constraints>
                                             <segments>
                                                 <segment title="less"/>
@@ -1610,24 +1613,22 @@
                                             </connections>
                                         </segmentedControl>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sauce Cell" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDO-uh-STl">
-                                            <rect key="frame" x="8" y="11" width="125" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="125" id="qhp-Dg-qYL"/>
-                                            </constraints>
+                                            <rect key="frame" x="8" y="11" width="369" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="fdT-Rg-3Ww" secondAttribute="trailing" constant="-7" id="2Al-zN-4X9"/>
-                                        <constraint firstItem="OHT-1i-hRf" firstAttribute="top" secondItem="AcF-yN-LNE" secondAttribute="topMargin" id="4JH-cR-hX6"/>
-                                        <constraint firstItem="GDO-uh-STl" firstAttribute="leading" secondItem="AcF-yN-LNE" secondAttribute="leadingMargin" constant="-7" id="7zZ-fp-7no"/>
-                                        <constraint firstItem="GDO-uh-STl" firstAttribute="centerY" secondItem="AcF-yN-LNE" secondAttribute="centerY" id="HsZ-2W-0ue"/>
-                                        <constraint firstItem="OHT-1i-hRf" firstAttribute="baseline" secondItem="GDO-uh-STl" secondAttribute="firstBaseline" id="Nfe-8r-Osn"/>
-                                        <constraint firstItem="fdT-Rg-3Ww" firstAttribute="leading" secondItem="OHT-1i-hRf" secondAttribute="trailing" constant="8" symbolic="YES" id="XGq-1d-Dhl"/>
-                                        <constraint firstItem="GDO-uh-STl" firstAttribute="baseline" secondItem="OHT-1i-hRf" secondAttribute="firstBaseline" id="jWI-Tb-Fe4"/>
-                                        <constraint firstItem="fdT-Rg-3Ww" firstAttribute="centerY" secondItem="GDO-uh-STl" secondAttribute="centerY" id="yOe-79-Zds"/>
+                                        <constraint firstItem="fdT-Rg-3Ww" firstAttribute="centerY" secondItem="AcF-yN-LNE" secondAttribute="centerY" id="14l-Jv-L5O"/>
+                                        <constraint firstItem="GDO-uh-STl" firstAttribute="baseline" secondItem="OHT-1i-hRf" secondAttribute="firstBaseline" id="Lol-BX-uOf"/>
+                                        <constraint firstItem="OHT-1i-hRf" firstAttribute="top" secondItem="AcF-yN-LNE" secondAttribute="topMargin" id="Rsh-it-gPZ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="fdT-Rg-3Ww" secondAttribute="trailing" constant="-7" id="TCw-Ij-EzV"/>
+                                        <constraint firstItem="fdT-Rg-3Ww" firstAttribute="leading" secondItem="OHT-1i-hRf" secondAttribute="trailing" constant="8" symbolic="YES" id="dmE-OD-afc"/>
+                                        <constraint firstItem="fdT-Rg-3Ww" firstAttribute="centerY" secondItem="GDO-uh-STl" secondAttribute="centerY" id="eUk-Vy-Czc"/>
+                                        <constraint firstItem="OHT-1i-hRf" firstAttribute="baseline" secondItem="GDO-uh-STl" secondAttribute="firstBaseline" id="g0i-nB-LT0"/>
+                                        <constraint firstItem="OHT-1i-hRf" firstAttribute="leading" secondItem="GDO-uh-STl" secondAttribute="trailing" constant="8" symbolic="YES" id="nWI-np-Liq"/>
+                                        <constraint firstItem="GDO-uh-STl" firstAttribute="leading" secondItem="AcF-yN-LNE" secondAttribute="leadingMargin" constant="-7" id="x2r-Mu-rCA"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
