--- a/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
+++ b/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
@@ -392,7 +392,7 @@
         <!--Making Coffee-->
         <scene sceneID="fOq-pY-ZaO">
             <objects>
-                <tableViewController title="Making Coffee" id="mV7-nx-WEo" sceneMemberID="viewController">
+                <tableViewController title="Making Coffee" id="mV7-nx-WEo" customClass="MakingCoffeeTableViewController" customModule="MyPocketSBUX" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="oyd-SQ-Pun">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -400,7 +400,7 @@
                         <sections>
                             <tableViewSection id="fAy-ed-Qba">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="BdR-lV-dNj" style="IBUITableViewCellStyleDefault" id="S4p-Tl-W2S">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="pourOverMakingCoffeeTableViewCell" textLabel="BdR-lV-dNj" style="IBUITableViewCellStyleDefault" id="S4p-Tl-W2S">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="S4p-Tl-W2S" id="Lri-5g-7hA">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -413,6 +413,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="GRG-ay-7f4" kind="show" identifier="pourOverSegue" id="eZL-us-1HB"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="ef6-Hd-aUs" style="IBUITableViewCellStyleDefault" id="JXl-Zh-7DR">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -478,9 +481,6 @@
                             <outlet property="delegate" destination="mV7-nx-WEo" id="ozF-5V-utf"/>
                         </connections>
                     </tableView>
-                    <connections>
-                        <segue destination="GRG-ay-7f4" kind="show" id="OPp-c7-Raf"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xe3-6t-i7W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -489,7 +489,9 @@
         <!--Making Coffee Page-->
         <scene sceneID="PvB-Ul-Tp1">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" title="Making Coffee Page" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="GRG-ay-7f4" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" title="Making Coffee Page" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="GRG-ay-7f4" customClass="MakingCoffeePageViewController" customModule="MyPocketSBUX" customModuleProvider="target" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4cm-ns-0Mi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1422" y="9936"/>
@@ -497,7 +499,7 @@
         <!--Making Coffee Page Content-->
         <scene sceneID="tUF-8V-EPM">
             <objects>
-                <viewController title="Making Coffee Page Content" id="eF2-Eo-4As" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MakingCoffeePageContentViewController" title="Making Coffee Page Content" id="eF2-Eo-4As" customClass="MakingCoffeePageContentViewController" customModule="MyPocketSBUX" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="UZm-HU-xNv"/>
                         <viewControllerLayoutGuide type="bottom" id="Qcx-3p-UcI"/>
@@ -506,24 +508,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hcs-cj-Wc1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hcs-cj-Wc1">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="301"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Content Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Tk-56-tz3">
-                                <rect key="frame" x="251" y="349" width="99" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Tk-56-tz3">
+                                <rect key="frame" x="16" y="349" width="568" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jCi-nU-JTD">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jCi-nU-JTD">
                                 <rect key="frame" x="16" y="390" width="568" height="202"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="202" id="5y2-ZO-4hE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hcs-cj-Wc1" firstAttribute="leading" secondItem="9C9-dL-JbP" secondAttribute="leading" id="7qh-U3-Rde"/>
+                            <constraint firstAttribute="trailing" secondItem="hcs-cj-Wc1" secondAttribute="trailing" id="FKp-3r-7u2"/>
+                            <constraint firstItem="jCi-nU-JTD" firstAttribute="leading" secondItem="9C9-dL-JbP" secondAttribute="leadingMargin" id="NhN-cq-HEc"/>
+                            <constraint firstItem="Qcx-3p-UcI" firstAttribute="top" secondItem="jCi-nU-JTD" secondAttribute="bottom" constant="8" symbolic="YES" id="Nv0-Ne-NgJ"/>
+                            <constraint firstItem="1Tk-56-tz3" firstAttribute="leading" secondItem="jCi-nU-JTD" secondAttribute="leading" id="Pnb-mY-U0W"/>
+                            <constraint firstItem="1Tk-56-tz3" firstAttribute="centerX" secondItem="hcs-cj-Wc1" secondAttribute="centerX" id="Wsx-2a-iis"/>
+                            <constraint firstItem="jCi-nU-JTD" firstAttribute="top" secondItem="1Tk-56-tz3" secondAttribute="bottom" constant="20" id="aIB-Yd-dZP"/>
+                            <constraint firstItem="hcs-cj-Wc1" firstAttribute="top" secondItem="9C9-dL-JbP" secondAttribute="top" id="bA2-I8-4mg"/>
+                            <constraint firstItem="jCi-nU-JTD" firstAttribute="trailing" secondItem="1Tk-56-tz3" secondAttribute="trailing" id="l74-6Z-t2V"/>
+                            <constraint firstItem="1Tk-56-tz3" firstAttribute="top" secondItem="hcs-cj-Wc1" secondAttribute="bottom" constant="48" id="x5d-uW-7w0"/>
+                        </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <connections>
+                        <outlet property="contentImageView" destination="hcs-cj-Wc1" id="DvM-6j-gKz"/>
+                        <outlet property="detailLabel" destination="jCi-nU-JTD" id="fXK-N2-cBU"/>
+                        <outlet property="titleLabel" destination="1Tk-56-tz3" id="DoR-ci-zLB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dk9-Dq-3Ms" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
